# lcc-docs

./: .gitattributes  .gitignore  ABOUT.md  ChangelogNew.2023.md  Comment_contribuer.md  Guidelines.md  Pipfile  README.md  TODO.txt  author_pseudos.json  check_mods_json.py  index.html  main.py  models.py  mods.json  pyproject.toml  settings.py  tbump.toml  update_index.py
.github/workflows/: ci.yml  update_html.yml
db/: author_pseudos.json  mods.json
docs/: Pipfile  README.md  index.html  models.py  mods.json  settings.py  update_index.py
docs/mod_list/static/css/: list.css
docs/mod_list/static/js/: main.js
docs/mod_list/templates/: base.html  category.html  search.html
docs/src/templates/: base.html  category.html  search.html
docs/static/css/: list.css
docs/static/img/: fond_descr_forum.avif
docs/static/js/: main.js
docs/templates/: base.html  category.html  search.html
listes_mods/: liste_mods1_bg.html  liste_mods1_bg2.html  liste_mods1_index.html  liste_mods1_iwd.html  liste_mods1_pst.html  liste_mods2_bg.html  liste_mods2_bg2.html  liste_mods2_index.html  liste_mods2_iwd.html  liste_mods2_pst.html
listes_mods/scripts/: script_tri_liste.js
listes_mods/styles/: style_lcc_doc.css  style_lcc_liste_mods1.css  style_lcc_liste_mods2.css
mod_list/static/js/: main.js
mod_list/templates/: base.html  category_menu.html
models/: __init__.py  mod.py  url.py  utils.py
ng/: mods.json
ng/mod_list/templates/: category.html
scripts/: check_mods_json.py  update_index.py  utils.py
src/static/css/: list.css
styles/: style_lcc_doc.css
(+13 files in other folders)
